[gd_scene load_steps=5 format=3 uid="uid://cwnujpo3d3n1a"]

[ext_resource type="Script" path="res://polygon.gd" id="1_qvuv8"]
[ext_resource type="PackedScene" uid="uid://d8w0qecxnk7h" path="res://line_edit.tscn" id="2_anqth"]
[ext_resource type="ButtonGroup" uid="uid://hm1aouqwv58w" path="res://new_button_group.tres" id="2_tcp6m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2m2jv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvuv8")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuPanel" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0

[node name="Clear" type="Button" parent="VBoxContainer/MarginContainer/MenuPanel"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "CLEAR"

[node name="Translation" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MenuPanel"]
layout_mode = 2

[node name="Translate" type="Label" parent="VBoxContainer/MarginContainer/MenuPanel/Translation"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "TRANSLATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dx" parent="VBoxContainer/MarginContainer/MenuPanel/Translation" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "dx"

[node name="Dy" parent="VBoxContainer/MarginContainer/MenuPanel/Translation" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "dy"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/MarginContainer/MenuPanel"]
layout_mode = 2

[node name="Rotation" type="VBoxContainer" parent="VBoxContainer/MarginContainer/MenuPanel"]
layout_mode = 2

[node name="Rotation" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation"]
layout_mode = 2

[node name="Rotate" type="Label" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation/Rotation"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "ROTATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rot" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation/Rotation" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "Â°"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation"]
layout_mode = 2

[node name="X" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation/HBoxContainer" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "x"

[node name="Y" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation/HBoxContainer" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "y"

[node name="Point" type="Button" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "POINT"

[node name="Center" type="Button" parent="VBoxContainer/MarginContainer/MenuPanel/Rotation/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "TO CENTER"

[node name="VSplitContainer3" type="VSplitContainer" parent="VBoxContainer/MarginContainer/MenuPanel"]
layout_mode = 2

[node name="Scale" type="VBoxContainer" parent="VBoxContainer/MarginContainer/MenuPanel"]
layout_mode = 2

[node name="Scale" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MenuPanel/Scale"]
layout_mode = 2

[node name="Scale" type="Label" parent="VBoxContainer/MarginContainer/MenuPanel/Scale/Scale"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "SCALE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sc" parent="VBoxContainer/MarginContainer/MenuPanel/Scale/Scale" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "*"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MenuPanel/Scale"]
layout_mode = 2

[node name="X" parent="VBoxContainer/MarginContainer/MenuPanel/Scale/HBoxContainer" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "x"

[node name="Y" parent="VBoxContainer/MarginContainer/MenuPanel/Scale/HBoxContainer" instance=ExtResource("2_anqth")]
layout_mode = 2
placeholder_text = "y"

[node name="Point" type="Button" parent="VBoxContainer/MarginContainer/MenuPanel/Scale/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "POINT"

[node name="Center" type="Button" parent="VBoxContainer/MarginContainer/MenuPanel/Scale/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "TO CENTER"

[node name="VSplitContainer2" type="VSplitContainer" parent="VBoxContainer/MarginContainer/MenuPanel"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/MenuPanel"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "APPLY CHANGES"

[node name="CheckPolygon" type="CheckBox" parent="VBoxContainer/MarginContainer/MenuPanel"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
button_group = ExtResource("2_tcp6m")
text = "CHECK POLYGON"

[node name="CheckLeftRight" type="CheckBox" parent="VBoxContainer/MarginContainer/MenuPanel"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
button_group = ExtResource("2_tcp6m")
text = "CHECK LEFT/RIGHT"

[node name="DrawPolygon" type="CheckBox" parent="VBoxContainer/MarginContainer/MenuPanel"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
button_pressed = true
button_group = ExtResource("2_tcp6m")
text = "DRAW POLYGON"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_2m2jv")

[connection signal="pressed" from="VBoxContainer/MarginContainer/MenuPanel/Clear" to="." method="_on_clear_pressed"]
[connection signal="gui_input" from="VBoxContainer/PanelContainer" to="." method="_on_panel_container_gui_input"]
